<resources>
    <string name="app_name">JocelynDressUp</string>

    <string name="type_promt">Type:</string>

    <string name="sub_total_prompt"><u>Sub Total</u></string>
    <string name="tax_prompt"><u>Tax</u></string>
    <string name="total_prompt"><u>Total</u></string>
    <string name="outfit_name_prompt"><u>Outfit</u></string>

    <string name="name_promt">Name:</string>
    <string name="price_promt">Price:</string>
    <string name="vendor_promt">Vendor:</string>

    <string name="app_by">App By Luke Harris and Daniel Malnati</string>

    <string name="about_text">Our project is an application that helps a user with budgeting, organizing and deciding upon clothing items. We had this idea when we heard people complaining about how long it took to decide on outfits to wear. The app features photo capturing, nfc tag reading, and a fully fleshed out database for outfits and clothing items. We hope this app helps you budget your shopping and always remember your favourite outfits.</string>
    <string name="about_promt">About</string>
    <string name="list_promt">Click to pick. Hold to Edit</string>
    <string name="listening_promt">Listening For Item...</string>
    <string name="sharing_promt">Sharing Item</string>
    <string name="main_promt">Main Page</string>
    <string name="save_item_promt">Save Item</string>
    <string name="home_promt">Home</string>
    <string name="outfits_promt">Outfits</string>
    <string name="update_promt">Update</string>
    <string name="about_nav_promt">About</string>
    <string name="delete_promt">Delete</string>
    <string name="cancel_promt">Cancel</string>

    <string name="main_instructions">swipe to change, tap to list items of type</string>

    <string name="add_new_item_promt">Add New Item</string>
    <string name="display_new_item_prompt">Ok</string>
    <string name="scan_new_item_promt">Scan New Item</string>
    <string name="share_item_prompt">Share</string>
    <string name="save_outfit_promt">Save Outfit</string>
    <string name="remove_outfit_promt">Remove Outfit</string>
    <string name="stop_listening_promt">Stop Listening</string>
    <string name="tutorial_end_promt">Got it, Let\'s go!</string>
    <string name="stop_sharing_promt">Stop Sharing </string>

    <string-array name="type_arrays">
        <item>Head</item>
        <item>Torso</item>
        <item>Legs</item>
        <item>Feet</item>
    </string-array>
</resources>
