<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.luke.jocelyndressup.ItemListActivity"
    android:background="@drawable/custom_button_highlight">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:id="@+id/navlayout"
        android:background="#003300"
        android:layout_marginBottom="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:text="@string/home_promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:onClick="onClick" />

        <Button
            android:text="@string/outfits_promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/OutfitsBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:onClick="onClick" />

        <Button
            android:text="@string/about_nav_promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AboutBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:onClick="onClick" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navlayout"
        android:layout_alignStart="@+id/addItemBtn"
        android:layout_above="@+id/textView4"
        android:id="@+id/list"
        android:layout_marginRight="10dp" />

    <Button
        android:text="@string/add_new_item_promt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addItemBtn"
        android:background="@drawable/custom_button_highlight"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:onClick="onClick" />

    <TextView
        android:text="@string/list_promt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/textView4"
        android:textColor="@android:color/white"
        android:paddingTop="16dp"
        android:layout_marginStart="14dp"
        android:layout_above="@+id/addItemBtn"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp" />

    <Button
        android:text="@string/scan_new_item_promt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addScanItemBtn"
        android:background="@drawable/custom_button_highlight"
        android:textColor="@android:color/white"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/addItemBtn"
        android:layout_marginStart="20dp" />

</RelativeLayout>
