<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luke.jocelyndressup.CameraActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/navlayout"
        android:background="#003300"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/home_promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:onClick="onClick" />

        <Button
            android:text="@string/outfits_promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/OutfitsBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:onClick="onClick" />

        <Button
            android:text="@string/about_nav_promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AboutBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:onClick="onClick" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navlayout"
        android:background="@drawable/custom_button">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@android:drawable/alert_light_frame"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView"
        android:adjustViewBounds="false"
        android:layout_below="@+id/saveImageBtn"
        android:layout_margin="10dp" />

    <Button
        android:text="@string/save_item_promt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/saveImageBtn"
        android:visibility="invisible"
        android:background="@drawable/custom_button"
        android:onClick="onClick"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/imageButton"
        android:onClick="onClick"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/navlayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
</RelativeLayout>

