<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    tools:context="com.example.luke.jocelyndressup.MainActivity"
    android:background="@android:color/white"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:id="@+id/navlayout"
        android:background="#003300"
        android:layout_marginBottom="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:text="Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button_highlight"
            android:textColor="@android:color/white" />

        <Button
            android:text="Outfits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/OutfitsBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:onClick="onClick" />

        <Button
            android:text="About"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AboutBtn"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageLayoutBack"
        android:layout_below="@+id/navlayout"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:background="@android:color/transparent"
        android:layout_alignBottom="@+id/imageLayout"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:srcCompat="@drawable/nothing"
            android:id="@+id/imageHeadTemp"
            android:padding="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/brown_gold_sweater"
            android:id="@+id/imageTorsoTemp"
            android:padding="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"
            android:layout_height="105dp"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/peasant_skirt"
            android:id="@+id/imageLegsTemp"
            android:padding="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"
            android:layout_height="155dp"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/brown_flats"
            android:id="@+id/imageFeetTemp"
            android:background="@android:color/black"
            android:layout_height="34dp"
            android:padding="1dp"
            android:scaleType="fitXY" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:id="@+id/imageLayout"
        android:layout_below="@+id/navlayout"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:srcCompat="@drawable/nothing"
            android:id="@+id/imageHead"
            android:padding="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/brown_gold_sweater"
            android:id="@+id/imageTorso"
            android:padding="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"
            android:layout_height="105dp"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/peasant_skirt"
            android:id="@+id/imageLegs"
            android:padding="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"
            android:layout_height="155dp"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/brown_flats"
            android:id="@+id/imageFeet"
            android:background="@android:color/black"
            android:layout_height="34dp"
            android:padding="1dp"
            android:scaleType="fitXY" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/imageLayoutBack"
        android:layout_below="@+id/navlayout"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:id="@+id/totalsLayout"
        android:layout_above="@+id/saveBtn"
        android:layout_toEndOf="@+id/pricesLayout">

        <TextView
            android:text="@string/sub_total_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/totalText"
            android:textColor="@android:color/white"/>

        <TextView
            android:text="@string/tax_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView20"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taxText"
            android:textColor="@android:color/white"/>

        <TextView
            android:text="@string/total_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView22"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overallTotalText"
            android:textColor="@android:color/white"/>

        <TextView
            android:text="@string/outfit_name_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outfitLabel"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outfitNameText"
            android:textColor="@android:color/white"
            android:visibility="invisible" />
    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/pricesLayout"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_above="@+id/saveBtn"
            android:paddingRight="10dp">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/headName"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"
                android:textSize="16sp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/headPrice"
                android:textColor="@android:color/white"/>

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/torsoName"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/torsoPrice"
                android:textColor="@android:color/white"/>

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/legsName"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/legsPrice"
                android:textColor="@android:color/white"/>

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feetName"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feetPrice"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <Button
            android:text="@string/save_outfit_promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            android:background="@drawable/custom_button"
            android:layout_above="@+id/removeOutfitBtn"
            android:layout_alignEnd="@+id/totalsLayout"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="13dp"
            android:layout_alignStart="@+id/pricesLayout"
            android:textColor="@android:color/white"
            android:onClick="onClick" />

        <Button
            android:text="@string/remove_outfit_promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/removeOutfitBtn"
            android:background="@drawable/custom_button"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="7dp"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/saveBtn"
            android:layout_alignStart="@+id/saveBtn"
            android:textColor="@android:color/white"
            android:onClick="onClick" />
    </RelativeLayout>

</RelativeLayout>
